Update metadata in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       gtag('config', 'G-CZ68RN01NH');
     </script>
 
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Doom Roulette">
+    <meta property="og:description" content="The random mod selector for Doom, Doom 2, Heretic, and Hexen.">
+    <meta property="og:image" content="https://doomroulette.com/launcher.png">
+    <meta property="og:url" content="https://doomroulette.com">
+
+
   </head>
   <body>
     <div id="root"></div>
